qglp 1st cmp spacing issue resolved

--- a/blocks/decoding-qglp/decoding-qglp.scss
+++ b/blocks/decoding-qglp/decoding-qglp.scss
@@ -14,7 +14,7 @@
   .decoding-qglp {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    // align-items: center;
     padding: 0 67px;
 
     @include media(mobile) {
@@ -33,6 +33,7 @@
         display: flex;
         flex-direction: column;
         gap: 12px;
+        margin-top: 47px;
 
         .glpcoding-sub-inner1 {
           margin: 0;
